--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   decimal: ^2.1.0
   flutter_slidable: ^1.2.0
   flutter_spinkit: ^5.1.0
+  styled_widget: ^0.4.0+3
 
 dev_dependencies:
   flutter_test:
